Updated from actual website source!!

--- a/about.html
+++ b/about.html
@@ -11,11 +11,20 @@
 		<a href="index.html"><h1>◀ Zack Hickman © 2014</h1></a><a href="mailto:zhickman@ccs.neu.edu">zhickman@ccs.neu.edu</a>
 	</header>
 	<div class="container">
-		<p>I'm a 2nd year at Northeastern University. I study Computer Science and Game Design.</p>
+		<p>I'm a 3rd-year at Northeastern University. I study Computer Science and Game Design.</p>
 
 		<p>I'm in an a cappella group called <a href="http://www.neu.edu/unisons/">The UniSons</a>, and I manage their website.</p>
 
 		<p>Originally, I was a web developer. I have since shifted to theory study and back-end development of non-web applications.</p>
+		
+		<h2>Schedule for Next Year</h2>
+		<ul>
+		    <li>CS 1210 - Computer Science/Information Science Overview 2: Co-op Preparation</li>
+		    <li>CS 3650 - Computer Systems</li>
+		    <li>CS 5400 - Principles of Programming Language (Masters)</li>
+		    <li>GAME 3700 - Rapid Idea Prototyping for Games</li>
+		    <li>SOCL 4528 - Computers and Society</li>
+		</ul>
 	</div>
 	<footer>
 	</footer>
